# wikipagent

./: .env.bak  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  check_mongodb.sh  cli.py  docker-compose.yml  pyproject.toml  streamlit_app.py
config/: __init__.py  adaptive_instructions.py  instructions.py
docs/: continue_here.md  project_alignment_analysis.md  search_agent_architecture_analysis.md
evals/: __init__.py  generate_ground_truth.py  ground_truth.json  ground_truth_paraphrased.json  save_results.py
evals/results/: minsearch_paraphrased.metadata.json  minsearch_results.metadata.json  sentence_transformers_paraphrased.metadata.json  sentence_transformers_results.metadata.json
neo4j_etl/src/: dump_stackexchange_payload.py  extract.py  inject.py  validate.py
orchestrator/: __init__.py  agent.py  config.py  models.py  tools.py
rag_agent/: __init__.py  agent.py  config.py  models.py  tools.py
search/: flexible_search.py  search_utils.py  simple_chunking.py
stream_stackexchange/: api_client.py  collector.py  extract.py  models.py  storage.py  validate.py
tests/: __init__.py
tests/neo4j_etl/: __init__.py
tests/neo4j_etl/src/: __init__.py  test_extract.py  test_inject.py  test_validate.py
tests/rag_agent/: __init__.py  conftest.py  test_agent.py  test_tools.py
tests/stream_stackexchange/: __init__.py  test_api_client.py  test_extract.py  test_models.py  test_validate.py
wikiagent/: config.py  models.py  stream_handler.py  tools.py  wikipagent.py
